--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -10,5 +10,13 @@
   --primary: rgba(0,118,255,.9);
   --green: #45c32e;
   --red: #ef1818;
+
+  --fs-xs: .875rem;
+  --fs-sm: 1rem;
+  --fs-md: 1.25rem;
+  --fs-lg: 1.5rem;
+  --fs-xlg: 1.75rem;
 }
+
+
 
