--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -16,8 +16,18 @@
   --fs-md: 1.25rem;
   --fs-lg: 1.5rem;
   --fs-xlg: 1.75rem;
+
+  --ff-heading: 'Poppins'
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: var(--ff-heading), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 
 html, body, main {
