--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -1,8 +1,8 @@
 :root {
   --background: #f1f2f5;
-  --foreground: #EFE9E2;
+  --foreground: #e8e8e8;
   --text: #1D1B1A;
-  --body: #757575;
+  --body: #8f8f8f;
   --invertBackground: #000;
   --invertText: #f1f2f5;
   --lightGray: #c5d2d9;
@@ -11,13 +11,16 @@
   --green: #45c32e;
   --red: #ef1818;
 
-  --fs-xs: .875rem;
+  --fs-xxsm: .75rem;
+  --fs-xsm: .875rem;
   --fs-sm: 1rem;
   --fs-md: 1.25rem;
   --fs-lg: 1.5rem;
   --fs-xlg: 1.75rem;
 
-  --ff-heading: 'Poppins'
+  --ff-heading: 'Poppins';
+
+  --border-radius: 4px;
 }
 
 * {
