feat(article): add created at

--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -1,7 +1,7 @@
 :root {
   --background: #f1f2f5;
   --foreground: #e8e8e8;
-  --text: #1D1B1A;
+  --heading: #1D1B1A;
   --body: #8f8f8f;
   --invertBackground: #000;
   --invertText: #f1f2f5;
