--- a/src/app/components/tag/styles.module.css
+++ b/src/app/components/tag/styles.module.css
@@ -1,6 +1,6 @@
 .tag {
   font-weight: 500;
-  color: var(--body);
+  color: var(--heading);
   text-decoration: none;
   font-size: var(--fs-xsm);
   padding: 4px 7px;
