--- a/src/app/components/article/styles.module.css
+++ b/src/app/components/article/styles.module.css
@@ -1,3 +1,10 @@
+.article {
+  background: var(--foreground);
+  padding: 20px;
+  border-radius: var(--border-radius-lg);
+  width: 100%;
+  border: 1px solid var(--border)
+}
 .article__title {
   font-size: var(--fs-xlg);
   color: var(--heading)
@@ -5,4 +12,26 @@
 
 .article__created_at {
   font-size: var(--fs-xxsm);
+  text-transform: capitalize;
+}
+
+.article__created_at--distance {
+  font-size: var(--fs-xxsm);
+  text-transform: unset;
+}
+
+.article__author__title {
+  font-size: var(--fs-xms);
+  font-weight: 500;
+}
+
+.article__author__avatar {
+  border-radius: 50%;
+}
+
+.article__author {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 8px;
 }
