--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -1,10 +1,11 @@
 .main {
   display: grid;
+  padding: 24px
 }
 
 @media (min-width: 762px) {
   .main {
-    max-width: 500px;
+    max-width: 600px;
     margin: 0 auto
   }
 }
