--- a/src/app/components/featured-article/styles.module.css
+++ b/src/app/components/featured-article/styles.module.css
@@ -17,6 +17,10 @@
   overflow: hidden;
 }
 
+.article__image img {
+  object-fit: cover;
+}
+
 .article__title {
   font-size: var(--fs-xlg);
   color: var(--heading);
