--- a/src/app/components/sidebar/styles.module.css
+++ b/src/app/components/sidebar/styles.module.css
@@ -1,9 +1,14 @@
 .sidebar {
   height: max-content;
-  padding: 24px;
-  border-radius: var(--border-radius);
-  border: 1px solid var(--border);
+}
+
+.sidebar__card {
   background: var(--foreground);
+  border: 1px solid var(--border);
+  border-radius: var(--border-radius);
+  padding: 24px;
+  display: grid;
+  gap: 1.2rem
 }
 
 .sidebar__section__title {
