--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -43,3 +43,13 @@ a {
   color: inherit;
   font-weight: inherit;
 }
+
+.container {
+  width: 100%;
+  max-width: 600px;;
+  margin: 0 auto
+}
+
+p {
+  line-height: 170%;
+}
