--- a/src/components/forms/text-input/styles.module.css
+++ b/src/components/forms/text-input/styles.module.css
@@ -30,7 +30,7 @@
 
 .text_input-input {
   padding: 0 1rem;
-  height: 3rem;
+  height: 40px;
   display: flex;
   align-items: center;
   border: none;
