--- a/src/app/globalStyles.css
+++ b/src/app/globalStyles.css
@@ -32,6 +32,7 @@
   font-family: var(--ff-heading), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--heading)
 }
 
 body {
